// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkListItem should render correctly 1`] = `
<li
  className="bpk-list__item"
>
  List item
</li>
`;

exports[`BpkListItem should render correctly with a "className" attribute 1`] = `
<li
  className="bpk-list__item test-list-item"
>
  List item
</li>
`;
